updated as hortonworks repo

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.file.MaxBackupIndex=20
 log4j.appender.file.File=logs/solr.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c{3} %x - %m%n
-log4j.logger.org.apache.zookeeper=WARN
+log4j.logger.org.apache.zookeeper=ERROR
 log4j.logger.org.apache.http=WARN
 log4j.logger.org.apache.solr.core.SolrCore=WARN
 log4j.logger.org.apache.solr.update.processor.LogUpdateProcessor=WARN
@@ -20,3 +20,7 @@ log4j.logger.org.apache.spark=WARN
 log4j.logger.org.apache.spark.storage.BlockManager=ERROR
 
 log4j.logger.org.apache.spark.ml.tuning.CrossValidator=INFO
+log4j.logger.com.lucidworks.spark.fusion.FusionPipelineClient=INFO
+log4j.logger.org.apache.solr=WARN
+log4j.logger.org.eclipse.jetty=ERROR
+log4j.logger.org.spark-project.jetty=ERROR
